# mapget-datasource-spatialite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attributes_info_example.json  conanfile.py  config_description.jsonc  config_description.yaml  config_schema.yaml  datasource_info_example.json  generate_config_schema_header.py
.github/workflows/: ci.yaml
src/: AttributesInfo.cpp  AttributesInfo.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Database.cpp  Database.h  Datasource.cpp  Datasource.h  GeometriesView.cpp  GeometriesView.h  GeometryType.h  IFeature.h  IGeometry.h  MapgetFeature.h  MapgetGeometry.h  NavInfoIndex.h  NavInfoIndexDummy.cpp  SqlStatements.cpp  SqlStatements.h  TableInfo.cpp  TableInfo.h  UniqueGaiaGeomCollPtr.h  main.cpp
test/: AttributesTest.cpp  CMakeLists.txt  ConfigLoaderTest.cpp  DatabaseTest.cpp  DatabaseTest.h  DatabaseTestFixture.cpp  DatabaseTestFixture.h  FeatureMock.h  GeometriesTest.cpp  GeometryMock.h  NavInfoIndexDummy.cpp  ScalingTest.cpp  Table.cpp  Table.h  TestDbDriver.cpp  TestDbDriver.h  main.cpp
